--- a/css/plumbier-1fe16c.webflow.css
+++ b/css/plumbier-1fe16c.webflow.css
@@ -460,6 +460,40 @@
   margin-left: 0;
 }
 
+.success-message {
+  background-color: rgba(222, 126, 0, 0);
+  border: 5px #de7e00;
+  border-radius: 20px;
+}
+
+.text-block-3 {
+  color: #f5f5f5;
+  text-shadow: 1px 2px 1px rgba(0, 0, 0, .97);
+  flex-direction: column;
+  justify-content: flex-start;
+  margin-top: 60px;
+  margin-bottom: 40px;
+  padding-top: 0;
+  font-size: 25px;
+  display: flex;
+}
+
+.button-3 {
+  background-color: #de7e00;
+  border-radius: 20px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  font-size: 25px;
+  box-shadow: 1px 2px 5px 1px rgba(0, 0, 0, .93);
+}
+
+.div-block-7 {
+  flex-direction: column;
+  display: flex;
+}
+
 @media screen and (max-width: 991px) {
   .heading-2 {
     margin-top: 10px;
@@ -511,6 +545,16 @@
 
   .section-3 {
     background-position: 100%;
+  }
+
+  .section-5 {
+    min-height: 500px;
+    background-position: 50% 0;
+  }
+
+  .container-6 {
+    flex-direction: column;
+    display: flex;
   }
 
   .paragraph-8, .paragraph-9, .paragraph-10 {
@@ -593,7 +637,22 @@
   }
 
   .heading-5 {
+    text-align: center;
+    white-space: pre-line;
     align-self: center;
+    font-size: 25px;
+  }
+
+  .section-5 {
+    background-position: 50%;
+    background-size: auto;
+  }
+
+  .container-6 {
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: stretch;
+    display: flex;
   }
 
   .cell-5 {
@@ -614,6 +673,15 @@
   .container-7 {
     flex-direction: column;
     display: flex;
+  }
+
+  .cell-8 {
+    display: flex;
+  }
+
+  .quick-stack-3 {
+    order: 0;
+    align-self: center;
   }
 }
 
@@ -690,6 +758,19 @@
   #w-node-_844c5050-d419-abb6-8071-7b62d96bf4c2-0977497f, #w-node-_15052cdd-af5c-fd55-4be0-9854e58102bc-0977497f, #w-node-_66afee9c-3a8f-8470-80bd-21504ecb41b8-0977497f {
     grid-area: span 1 / span 1 / span 1 / span 1;
   }
+
+  #w-node-_2078e8eb-33ad-da99-4b56-6028578ffef4-0977497f {
+    grid-template-rows: auto auto auto auto;
+    grid-template-columns: 1fr;
+  }
+
+  #w-node-_98b6548e-9a7a-b6f7-3b2d-c89eedfdc56a-0977497f, #w-node-e3dfaa61-e736-0cfa-4c8a-c8c6f4dfa36b-0977497f, #w-node-d0fcea55-4d29-12ae-5f82-b9c66f5095aa-0977497f {
+    grid-area: span 1 / span 1 / span 1 / span 1;
+  }
+
+  #w-node-cd5b7935-5d07-abf9-1ed5-83ac0854b977-0977497f, #w-node-_46832d46-ad32-17c2-89b0-49fe31d229d4-0977497f {
+    grid-area: span 2 / span 1 / span 2 / span 1;
+  }
 }
 
 @media screen and (max-width: 479px) {
@@ -718,4 +799,29 @@
   #w-node-_844c5050-d419-abb6-8071-7b62d96bf4c2-0977497f, #w-node-_15052cdd-af5c-fd55-4be0-9854e58102bc-0977497f, #w-node-_66afee9c-3a8f-8470-80bd-21504ecb41b8-0977497f {
     grid-area: span 1 / span 1 / span 1 / span 1;
   }
+
+  #w-node-_2078e8eb-33ad-da99-4b56-6028578ffef4-0977497f {
+    grid-template-rows: auto auto auto auto;
+    grid-template-columns: 1fr;
+    display: grid;
+  }
+
+  #w-node-_98b6548e-9a7a-b6f7-3b2d-c89eedfdc56a-0977497f {
+    grid-area: span 1 / span 1 / span 1 / span 1;
+  }
+
+  #w-node-e3dfaa61-e736-0cfa-4c8a-c8c6f4dfa36b-0977497f {
+    order: 0;
+    grid-area: span 1 / span 1 / span 1 / span 1;
+  }
+
+  #w-node-d0fcea55-4d29-12ae-5f82-b9c66f5095aa-0977497f {
+    grid-area: span 1 / span 1 / span 1 / span 1;
+  }
+
+  #w-node-cd5b7935-5d07-abf9-1ed5-83ac0854b977-0977497f, #w-node-_46832d46-ad32-17c2-89b0-49fe31d229d4-0977497f {
+    grid-area: span 2 / span 1 / span 2 / span 1;
+  }
 }
+
+
